--- a/src/pages/Login/index.module.less
+++ b/src/pages/Login/index.module.less
@@ -4,7 +4,7 @@
   justify-content: center;
   width: 100vw;
   height: 100vh;
-  background-image: url(../../assets/images/TVYTbAXWheQpRcWDaDMu.svg);
+  background-image: url('../../assets/images/TVYTbAXWheQpRcWDaDMu.svg');
   background-repeat: no-repeat;
   background-position: center 110px;
   background-size: 100%;
@@ -12,7 +12,7 @@
 
 .loginContent {
   width: 360px;
-  margin: 'auto';
+  margin: auto;
 }
 
 .loginTitle {
